--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         pointer: {
           length: 0.5,
           strokeWidth: 0.035,
-          color: "red",
+          color: "#ff4800",
         },
         limitMax: false,
         colorStart: "blue",
