--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       #campo {
         padding: 8px;
         font-size: 14px;
+        padding-left: 25px;
+        margin-left: 25px;
       }
       button {
         padding: 10px 20px;
